2009-02-18  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-pannable-area.c (hildon_pannable_area_class_init):
	Set default movement mode to HILDON_MOVEMENT_MODE_VERT.

2009-02-18  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-gtk.c: Check that the window is realized.

	Fixes: NB#102225 (Crash setting the progress indicator to a non
	visible window)

2009-02-17  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-pannable-area.c (hildon_pannable_draw_vscroll)
	(hildon_pannable_draw_hscroll): Make a copy of the graphic context
	instead of modifying the one in the widget style.

	Fixes: NB#101043 (Second row of all the command button are
	displayed in transparent mode.)

2009-02-17  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-date-button.c
	* src/hildon-time-button.c: Add gettext macros

2009-02-16  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-date-button.c (hildon_date_button_new):
	* src/hildon-time-button.c (hildon_time_button_new_step):
	Use new logical strings to set the button default title.

	Fixes: NB#99915 (Date and Time options are not localised in Date
	and Time setttings)

2009-02-16  Alejandro G. Castro  <alex@igalia.com>

	* src/hildon-pannable-area.c
	(hildon_pannable_area_motion_notify_cb): Fixed typo in the name of
	the PANNING_THRESHOLD.

2009-02-16  Alejandro G. Castro  <alex@igalia.com>

	* src/hildon-pannable-area.c,
	(hildon_pannable_area_class_init): Increased the maximum speed.
	(hildon_pannable_area_get_property),
	(hildon_pannable_area_set_property),
	(hildon_pannable_area_timeout): Added a new low friction mode, it
	allows the user avoid friction when launching the widget fast
	enough. It is interesting to traverse long lists.

2009-02-16  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-stackable-window.c (hildon_stackable_window_class_init)
	(+hildon_stackable_window_delete_event): Ignore delete events if
	the window is not the topmost one.
